objects/vlocity_ins__Statement__c.object
<CustomObject>
    <description>Summaries from statements produced by a client&apos;s billing software can be imported into this object. Historical statements can be retained as well.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BalanceDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the billing account for which this statement was generated.</description>
        <label>Billing Account</label>
        <referenceTo>vlocity_ins__BillingAccount__c</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CurrentBalance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeDue__c</fullName>
        <label>Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PreviousBalance__c</fullName>
        <label>Previous Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementDate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementImageURL__c</fullName>
        <label>Statement Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementPeriodEndDate__c</fullName>
        <label>Statement Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementPeriodStartDate__c</fullName>
        <label>Statement Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxDue__c</fullName>
        <label>Tax Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Statement</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Bill</fullName>
        <active>true</active>
        <label>Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Statement</fullName>
        <active>true</active>
        <label>Statement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>